@@ -18,6 +18,7 @@ import java.util.NavigableSet;
 import java.util.Objects;
 import java.util.TreeSet;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public final class MethodBuilder {
@@ -79,13 +80,13 @@ public final class MethodBuilder {
     }
 
     public MethodBuilder withParameterTypes(Iterable<TypeId> parameters) {
-        return withParameters(StreamSupport.stream(
-                        parameters.spliterator(), false)
-                .map(Parameter::of).toList());
+        return withParameters(StreamSupport.stream(parameters.spliterator(), false)
+                .map(Parameter::of).collect(Collectors.toList()));
     }
 
     public MethodBuilder withParameterTypes(TypeId... parameters) {
-        return withParameters(Arrays.stream(parameters).map(Parameter::of).toList());
+        return withParameters(Arrays.stream(parameters)
+                .map(Parameter::of).collect(Collectors.toList()));
     }
 
     public MethodBuilder withProto(ProtoId proto) {
